# PAPRLE_hw

./: .gitmodules  README.md
papras_playgound/papras-kitchen/moveit_configs/kitchen_two_7dof_arms_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
papras_playgound/papras-kitchen/papras_kitchen/: CMakeLists.txt  package.xml
papras_playgound/papras-kitchen/papras_kitchen/config/: counter_test.yaml  dishwasher_test.yaml  hardware.yaml  hardware_counter.yaml  hardware_dual.yaml  hardware_dual2.yaml  hardware_short.yaml  joint_trajectory_controller.yaml  joint_trajectory_controller_gazebo.yaml  mobile_test.yaml  notes.txt  sim_screenshot.yaml  sim_ss_moveit.rviz  workspace_analysis.yaml
papras_playgound/papras-kitchen/papras_kitchen/launch/: two_7dof_gazebo.launch  two_7dof_gazebo.launch.py  two_7dof_hw.launch  two_7dof_hw.launch.py
papras_playgound/papras-orthrus/: README.md
papras_playgound/papras-orthrus/moveit_configs/papras_7dof_moving_base_teleop/: .setup_assistant  CMakeLists.txt  package.xml
papras_playgound/papras-orthrus/moveit_configs/papras_orthrus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
papras_playgound/papras-orthrus/papras_orthrus/: CMakeLists.txt  package.xml
papras_playgound/papras-orthrus/papras_orthrus/config/: hardware_spot_7dof_teleop.yaml
papras_playgound/papras-orthrus/papras_orthrus/launch/: display.launch  hw_7dof_spot_teleop.launch  orthrus_gazebo.launch.py  orthrus_hw.launch.py  sim_7dof_spot_teleop.launch  spot_move_sim.launch
papras_playgound/papras-orthrus/papras_orthrus/scripts/: spot_moveit_commander.py
papras_playgound/papras-orthrus/spot_ros/spot_graphs/: how_to_map.md  kimlab_table_05_23.txt  kimlab_table_kitchen_arm_safe_waypoints.txt  kimlab_table_to_kitchen_waypoints.txt  waypoints.txt
papras_playgound/papras-table/moveit_configs/single_7dof_papras_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
papras_playgound/papras-table/moveit_configs/two_7dof_papras_moveit_config/: package.xml  (+2 more)
papras_playgound/papras-table/papras_table/: CMakeLists.txt  package.xml
papras_playgound/papras-table/papras_table/config/: effort_controller_test.yaml  follower_hw.yaml  follower_hw2.yaml  follower_hw_bak.yaml  leader_gravity_compensation.yaml  one_7dof_onepapras_leader_hw.yaml  papras_leader_1_arm.yaml  papras_leader_hw.yaml  papras_leader_hw_bak.yaml  teleoperation_table.rviz  two_7dof_papras.yaml  two_7dof_two_papras_leader.yaml
papras_playgound/papras-table/papras_table/config/table_settings/: one_7dof_one_papras_leader.yaml  two_7dof_two_7dof_papras_leader.yaml  two_7dof_two_papras_leader.yaml
papras_playgound/papras-table/papras_table/description/meshes/: handle.stl
papras_playgound/papras-table/papras_table/description/meshes/papras/: link2.stl  link3.stl  link4.stl
papras_playgound/papras-table/papras_table/description/meshes/papras_7dof/: link2.stl  link4.stl  link6.stl
papras_playgound/papras-table/papras_table/description/meshes/ur5/: link3.stl  link4.stl  link5.stl
papras_playgound/papras-table/papras_table/description/urdf/: dual_7dof_metal_arm_hw.xacro  single_7dof_metal_arm_hw.xacro  teleop_table_1_7dof_gazebo.urdf.xacro  teleop_table_1_7dof_hw.urdf.xacro  teleop_table_7dof.urdf.xacro  teleop_table_7dof_gazebo.urdf.xacro  teleop_table_7dof_hw.urdf.xacro
papras_playgound/papras-table/papras_table/launch/: dual_arm_gazebo.launch.py  dual_arm_metal_hw.launch.py  dual_arm_visionpro_gazebo.launch.py  dual_arm_visionpro_metal_hw.launch.py  single_arm_gazebo.launch.py  single_arm_metal_hw.launch.py  two_arm_7dof_hw.launch  two_arm_7dof_sim.launch
papras_playgound/papras-teleop-bag/moveit_configs/: .setup_assistant
papras_playgound/papras-teleop-bag/papras_teleop_bag/: CMakeLists.txt  package.xml
papras_playgound/papras-teleop-bag/papras_teleop_bag/config/: single_7dof_papras.yaml
papras_playgound/papras-teleop-bag/papras_teleop_bag/description/meshes/ur5/: link1.stl  link2.stl
papras_playgound/papras-teleop-bag/papras_teleop_bag/description/urdf/: dual_7dof_metal_arm_gazebo.xacro  dual_7dof_metal_arm_hw.xacro  single_7dof_metal_arm_gazebo.xacro  single_7dof_metal_arm_hw.xacro
papras_playgound/papras-teleop-bag/papras_teleop_bag/launch/: dual_arm_gazebo.launch.py  dual_arm_metal_hw.launch.py  single_arm_gazebo.launch.py  single_arm_metal_hw.launch.py
teleop_leaders/: CMakeLists.txt  controller_plugin.xml  package.xml
teleop_leaders/config/: g1_leaders_all_limbs.yaml  g1_leaders_two_legs.yaml  ros2_controllers_leader.yaml  ros2_controllers_leader_omy.yaml  single_7dof_leaders.yaml  single_omy_leader.yaml  single_ur5_leader.yaml  two_7dof_leaders.yaml
teleop_leaders/config/feedback_params/: feedback_param_omy.yaml  feedback_param_single_7dof_leader.yaml  feedback_param_two_7dof_leaders.yaml  feedback_param_ur5.yaml
teleop_leaders/description/meshes/: base_link.stl  table.stl  trigger.stl
teleop_leaders/description/meshes/papras/: link1.stl  link5.stl
teleop_leaders/description/meshes/papras_7dof/: link1.stl  link3.stl  link5.stl
teleop_leaders/description/urdf/: g1_leader_macros.ros2_control.xacro  leader_macros.ros2_control.xacro  leader_macros.xacro  leader_omy.urdf.xacro  leader_single_7dof_papras.xacro  leader_ur5.urdf.xacro  leaders_g1_all_limbs.urdf.xacro  leaders_g1_two_legs.urdf.xacro  leaders_two_7dof.urdf.xacro  open_manipulator_y_leader_arm.urdf
teleop_leaders/include/feedback_controller/: feedback_controller.h  feedback_controller.hpp  visibility_control.h
teleop_leaders/include/hardware_interface/: leader_hw_interface.h
teleop_leaders/launch/: leader_hw.launch.py  leader_hw_g1_all_limbs.launch.py  leader_hw_g1_twolegs.launch.py  leader_hw_single_7dof_papras.launch.py  leader_hw_single_omy.launch.py  leader_hw_single_ur5.launch.py  leader_hw_two_7dof_leaders.launch.py
teleop_leaders/src/: feedback_controller.cpp  feedback_controller_parameters.yaml  leader_control_node.cpp  leader_hw_interface.cpp
teleop_msgs/: CMakeLists.txt  package.xml
teleop_msgs/msg/: EEFTransforms.msg
teleop_msgs/srv/: SetBasePose.srv  SetEEFNames.srv
(+372 files in other folders)
