<?xml version='1.0' encoding='UTF-8'?>
<package format="3">
  <name>teleop_msgs</name>
  <version>1.0.1</version>
  <description>
    Package for PAPRAS leader follower teleoperation table
  </description>
  <license>Apache 2.0</license>
  <author email="obin.kwon000@gmail.com">Obin Kwon</author>
  <author email="sankalp.yamsani@gmail.com">Sankalp Yamsani</author>
  <maintainer email="obin.kwon000@gmail.com">Obin Kwon</maintainer>
  <maintainer email="sankalp.yamsani@gmail.com">Sankalp Yamsani</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
