<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>papras_table</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  
  <license>Apache 2.0</license>
  <author email="obin.kwon000@gmail.com">Obin Kwon</author>
  <author email="sankalp.yamsani@gmail.com">Sankalp Yamsani</author>
  <maintainer email="obin.kwon000@gmail.com">Obin Kwon</maintainer>
  <maintainer email="sankalp.yamsani@gmail.com">Sankalp Yamsani</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>angles</depend>
  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>rsl</depend>
  <depend>tl_expected</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>teleop_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
