<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>papras_teleop_bag</name>
  <version>0.0.0</version>
  <description>Package for running teleop bag</description>
  
  <license>Apache 2.0</license>
  <author email="obin.kwon000@gmail.com">Obin Kwon</author>
  <author email="sankalp.yamsani@gmail.com">Sankalp Yamsani</author>
  <maintainer email="obin.kwon000@gmail.com">Obin Kwon</maintainer>
  <maintainer email="sankalp.yamsani@gmail.com">Sankalp Yamsani</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
